--- a/pulsemanager/templates/pages/about.html
+++ b/pulsemanager/templates/pages/about.html
@@ -21,10 +21,10 @@ leading to strategic planning, and with God's blessing, the preferred future of 
 <b>{% trans "Take Your Church's Pulse – Book" %}</b>
 <br>
 {% blocktrans %}
-The book should be a prerequisite to using the TYCP online diagnostic tool. It presents Ten Vital Signs of a healthy church— Five Key Commitments
+The <a href='http://toolbox.multiplicationnetwork.org/'>book<a> should be a prerequisite to using the TYCP online diagnostic tool. It presents Ten Vital Signs of a healthy church— Five Key Commitments
 and Five Key Functions. It then introduces the reader to a church health diagnostic tool can be applied to a variety of church and small group settings.
-Thousands of pastors and leaders around the world have found this framework helpful in organizing the ministry and mission of the local church. T
-he TYCP book and the diagnostic tool it presents are most useful if accompanied by a robust engagement in conversations.
+Thousands of pastors and leaders around the world have found this framework helpful in organizing the ministry and mission of the local church.
+The TYCP book and the diagnostic tool it presents are most useful if accompanied by a robust engagement in conversations.
 We trust the humble, prayerful, and courageous men and women discussing these ten vital signs will be led by the Holy Spirit to discern and move
 toward a blessed future in every local community of faith.{% endblocktrans %}
 </p>
