Changed prerequisit to available.

--- a/pulsemanager/templates/pages/about.html
+++ b/pulsemanager/templates/pages/about.html
@@ -21,7 +21,7 @@ leading to strategic planning, and with God's blessing, the preferred future of 
 <b>{% trans "Take Your Church's Pulse – Book" %}</b>
 <br>
 {% blocktrans %}
-The <a href='http://toolbox.multiplicationnetwork.org/' target='_blank'>book<a> should be a prerequisite to using the TYCP online diagnostic tool. It presents Ten Vital Signs of a healthy church— Five Key Commitments
+The <a href='http://toolbox.multiplicationnetwork.org/' target='_blank'>book<a> is available as a great companion to the TYCP online diagnostic tool. It presents Ten Vital Signs of a healthy church— Five Key Commitments
 and Five Key Functions. It then introduces the reader to a church health diagnostic tool can be applied to a variety of church and small group settings.
 Thousands of pastors and leaders around the world have found this framework helpful in organizing the ministry and mission of the local church.
 The TYCP book and the diagnostic tool it presents are most useful if accompanied by a robust engagement in conversations.
